Ok, finally happy with the initial structure
Off we go! :-)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   <time datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
   <ul class="tag_list_in_post">{% for tag in page.tags %}
   <li class="inline tag_list_item">
-  <a class="tag_list_link" href="/tags.html#{{ tag }}">{{ tag }}</a>
+  <a class="tag_list_link" href="/tags/#{{ tag }}">{{ tag }}</a>
   </li>{% endfor %}</ul>
   </div>
 
