--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title></title>
+
   <link rel="canonical" href="http://www.pekkos.com/" />
+
 </head>
+
+<!--
+_                                                                  __
+_   _  ___  _   _( )_ __ ___      __ ___      _____  ___  ___  _ __ ___   ___     _  \ \
+| | | |/ _ \| | | |/| '__/ _ \    / _` \ \ /\ / / _ \/ __|/ _ \| '_ ` _ \ / _ \   (_)  | |
+| |_| | (_) | |_| | | | |  __/   | (_| |\ V  V /  __/\__ \ (_) | | | | | |  __/    _   | |
+\__, |\___/ \__,_| |_|  \___|    \__,_| \_/\_/ \___||___/\___/|_| |_| |_|\___|   (_)  | |
+|___/                                                                                /_/
+-->
+
 <body>
+
   {{ content }}
+
+
+  <!--[if lte IE 9]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+
+
+  <!-- Third party scripts starts here -->
 
   <!-- Google Analytics -->
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-30823001-4', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-30823001-4', 'auto');
+    ga('send', 'pageview');
   </script>
 
   <!-- Mouse Flow -->
@@ -25,8 +50,11 @@
     var mf = document.createElement("script"); mf.type = "text/javascript"; mf.async = true;
     mf.src = "//cdn.mouseflow.com/projects/41864479-8955-4644-9eb6-3eaee936cff1.js";
     document.getElementsByTagName("head")[0].appendChild(mf);
-  })();
-</script>
+    })();
+  </script>
+
+  <!-- End of third party scripts -->
 
 </body>
+
 </html>
