grunt build update

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
 
   <link rel="canonical" href="http://www.pekkos.com/" />
   <link rel="author" href="humans.txt" />
+
+  <!-- Minified css, FTW! -->
   <link rel="stylesheet" href="css/styles.css" />
 
 </head>
