--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <!-- Third party scripts starts here -->
 
-<!-- Google Analytics -->
+<!-- Google Analytics - Stats collection -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -11,7 +11,7 @@
   ga('send', 'pageview');
 </script>
 
-<!-- Mouse Flow -->
+<!-- Mouse Flow - User behavior tracking -->
 <script type="text/javascript">
   var _mfq = _mfq || [];
   (function () {
