--- a/patterns/source/css/styles-oldie.css
+++ b/patterns/source/css/styles-oldie.css
@@ -26,8 +26,9 @@ body {
   color: red;
   text-decoration: none;
   border-radius: 0;
+  zoom: 1;
 }
 
-html {
-  font-size: 80%;
+h1 {
+  text-transform: inherit;
 }
