Added syntax highlighting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="author" href="humans.txt" />
 
   <!-- Minified css, FTW! -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="/css/styles.css" />
 
 </head>
 
