--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <!-- Third party scripts starts here -->
 
+{% if jekyll.environment == 'production' %}
 <!-- Google Analytics - Stats collection -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -20,5 +21,9 @@
   document.getElementsByTagName("head")[0].appendChild(mf);
   })();
 </script>
+{% else %}
+  <small>Development</small>
+{% endif %}
+
 
 <!-- End of third party scripts -->
