minor edit of dev stuff

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -22,7 +22,7 @@
   })();
 </script>
 {% else %}
-  <small>Development</small>
+  <small style="background-color: #ff9;">&lt;Development&gt;</small>
 {% endif %}
 
 
