--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,15 +5,20 @@ layout: default
   <h1 class="spacing">{{ page.title }}</h1>
 
   <div class="meta_wrapper">
-  <time datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
-  <ul class="tag_list_in_post">{% for tag in page.tags %}
-  <li class="inline tag_list_item">
-  <a class="tag_list_link" href="/tags/#{{ tag }}">{{ tag }}</a>
-  </li>{% endfor %}</ul>
+    <span>{{ page.category }}, 
+      <time datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
+    </span>
+    <ul class="tag_list_in_post">
+      {% for tag in page.tags %}
+      <li class="inline tag_list_item">
+        <a class="tag_list_link" href="/tags/#{{ tag }}">{{ tag }}</a>
+      </li>
+      {% endfor %}
+    </ul>
   </div>
 
   <div class="blog-post spacing">
-    <p class="summary">{{ page.category }}<span class="date">{{ page.date | date: '%B %d, %Y' }}</span></p>
     {{ content }}
   </div>
+
 </div>
