Added Disqus comments section

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -25,8 +25,8 @@
   <small style="background-color: #ff9;">&lt;Development&gt;</small>
 {% endif %}
 
-
-
+<!-- comments count -->
+<script id="dsq-count-scr" src="//pekkos.disqus.com/count.js" async></script>
 
 
 <!-- End of third party scripts -->
