page category removed from post header

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <h1 class="spacing">{{ page.title }}</h1>
 
   <div class="meta_wrapper">
-    <span>{{ page.category }},
+    <span><!-- page.category (removed temporarily?) -->,
       <time datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
     </span>
     <ul class="tag_list_in_post">
