--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,7 @@ layout: default
   <div class="blog-post spacing">
     {{ content }}
   </div>
+  {% include twitter-plug.html %}
 
   {% include comments.html %}
 
