--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -23,6 +23,7 @@
 </script>
 {% else %}
   <small style="background-color: #ff9;">&lt;Development&gt;</small>
+  <script src="/js/tota11y.min.js"></script>
 {% endif %}
 
 <!-- comments count -->
