--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
-{% include head.html %}
+{% include root-head.html %}
 
 <body>
 
-  {% include header.html %}
+  {% include page-header.html %}
 
   <main role="main">
     {{ content }}
   </main>
 
-  {% include footer.html %}
+  {% include page-footer.html %}
 
   {% include scripts.html %}
 
