--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,7 +1,7 @@
 
 <footer role="contentinfo">
   <hr>
-  <p>Handcrafted by <a href="http://about.me/pekkos" target="_blank">Jonas Päckos</a>, &copy; {{ site.time | date: '%Y' }}. <a href="http://github.com/pekkos/pekkos.github.io" target="_blank">View source</a>.</p>
+  <p>Handcrafted by <a href="http://about.me/pekkos" target="_blank">Jonas Päckos</a>, &copy; 2016-{{ site.time | date: '%Y' }}. <a href="http://github.com/pekkos/pekkos.github.io" target="_blank">View source</a>.</p>
 </footer>
 
 <!--[if lte IE 9]>
