Replaced Pattern Lab CSS structure with a new embryo

--- a/patterns/source/css/pattern-scaffolding.css
+++ b/patterns/source/css/pattern-scaffolding.css
@@ -5,7 +5,6 @@
  */
 
 #sg-patterns {
-  -webkit-box-sizing: border-box !important;
   box-sizing: border-box !important;
   max-width: 100%;
   padding: 0 0.5em;
@@ -54,12 +53,7 @@
   line-height: 1;
 }
 
-#atoms-logo-reversed .sg-pattern-example {
-	background: #444444;
-	display: inline-block;
-}
-
-#molecules-logo-footer-link .sg-pattern-example {
+#atoms-logo-reversed .sg-pattern-example,#molecules-logo-footer-link .sg-pattern-example {
 	background: #444444;
 	display: inline-block;
 }
