--- a/patterns/source/css/scss/_manifest.scss
+++ b/patterns/source/css/scss/_manifest.scss
@@ -1,20 +1,49 @@
 @import "base/base";
 
+
 html {
   background: pink;
+  border-color: blue;
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
 
   @include old-ie {
     background: lightgreen;
   }
 }
 
-.rounded {
-  border-radius: 10px;
-  background-image: linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  font-size: 2rem;
+a {
+  text-decoration: none;
+}
+
+@media (min-width: 500px) {
+  .rounded {
+    border-radius: 10px;
+    font-size: 2rem;
+  }
 }
 
 .rounded {
   border: 1px solid red;
   text-decoration: underline;
+}
+
+@media (min-width: 250px) {
+  h1 {
+    color: green;
+  }
+}
+
+html {
+  line-height: 1.5;
+}
+
+@media (min-width: 500px) {
+  div {
+    border-radius: 4px;
+    background: blue;
+  }
+}
+
+a {
+  text-decoration: none;
 }
