--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,8 +1,8 @@
 
 <footer role="contentinfo">
   <hr>
-  <p>Handcrafted by <a rel="me" href="http://about.me/pekkos" target="_blank">Jonas Päckos</a>, &copy; 2016-{{ site.time | date: '%Y' }}. <a rel="me" href="http://github.com/pekkos/pekkos.github.io" target="_blank">View source</a>.</p>
-  <p>Talk to me on <a rel="me" href="https://twitter.com/pekkos">twitter</a></p>
+  <p>Handcrafted by <a rel="me" href="http://about.me/pekkos" target="_blank">Jonas Päckos</a>, &copy; 2016-{{ site.time | date: '%Y' }}. <a href="http://github.com/pekkos/pekkos.github.io" target="_blank">View source</a>.</p>
+  <p>Talk to me on <a rel="me" href="https://twitter.com/pekkos">twitter</a> or <a rel="me" href="https://github.com/pekkos">GitHub</a></p>
 </footer>
 
 <!--[if lte IE 9]>
