added microformats, as a test

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 ---
-<div class="container">
-  <h1 class="spacing">{{ page.title }}</h1>
+<article class="container h-entry">
+  <h1 class="spacing p-name">{{ page.title }}</h1>
 
   <div class="meta_wrapper">
     <span><!-- page.category (removed temporarily?) -->
-      <time datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
+      <time class="dt-published" datetime="{{page.date | date: "%Y-%m-%d"}}">{{page.date | date: "%B %e, %Y"}}</time>
+      <p>datetime: {{page.date | date: "%Y-%m-%d"}}</p>
     </span>
     <ul class="tag_list_in_post">
       {% for tag in page.tags %}
@@ -17,11 +18,11 @@ layout: default
     </ul>
   </div>
 
-  <div class="blog-post spacing">
+  <div class="blog-post spacing e-content">
     {{ content }}
   </div>
   {% include twitter-plug.html %}
 
   {% include comments.html %}
 
-</div>
+</article>
