Re-structured gruntfile into small config files

--- a/patterns/source/css/pattern-scaffolding.css
+++ b/patterns/source/css/pattern-scaffolding.css
@@ -5,7 +5,8 @@
  */
 
 #sg-patterns {
-  box-sizing: border-box !important;
+  -webkit-box-sizing: border-box !important;
+          box-sizing: border-box !important;
   max-width: 100%;
   padding: 0 0.5em;
 }
