--- a/patterns/source/css/style.css
+++ b/patterns/source/css/style.css
@@ -198,6 +198,7 @@ body {
  */
 .animate-fade {
   -webkit-transition: opacity 0.3s ease-out;
+  -o-transition: opacity 0.3s ease-out;
   transition: opacity 0.3s ease-out; }
   .animate-fade:hover {
     opacity: 0; }
@@ -423,6 +424,7 @@ a {
   text-decoration: none;
   outline: 0;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   a:hover, a:focus {
     color: #444444; }
@@ -507,7 +509,8 @@ figcaption {
  * Use border box on all elements
  */
 * {
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 /**
  * Zero out margin and padding on most elements as base style
@@ -624,6 +627,7 @@ abbr {
   font-size: 41.6px;
   font-size: 2.6rem;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-hero:hover .c-block-hero__headline, .c-block-hero:focus .c-block-hero__headline {
     background: #444444; }
@@ -641,6 +645,7 @@ abbr {
   display: -ms-flexbox;
   display: flex;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-media:hover .c-block-media__headline, .c-block-media:focus .c-block-media__headline {
     color: #5C832F; }
@@ -672,6 +677,7 @@ abbr {
   margin-bottom: 0.2em;
   color: #595959;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-media--small .c-block-media__headline {
     font-size: 16px;
@@ -696,6 +702,7 @@ abbr {
 .c-block-media__excerpt {
   color: #a5a5a5;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-media--small .c-block-media__excerpt {
     margin-bottom: 0;
@@ -735,6 +742,7 @@ abbr {
   font-size: 22.4px;
   font-size: 1.4rem;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-tout:hover .c-block-tout__headline, .c-block-tout:focus .c-block-tout__headline {
     padding-bottom: 32px;
@@ -769,6 +777,7 @@ abbr {
   text-align: center;
   overflow: hidden;
   -webkit-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
   transition: all 0.2s ease; }
   .c-block-tile:hover, .c-block-tile:focus {
     background: rgba(0, 0, 0, 0.7);
@@ -822,6 +831,7 @@ abbr {
   border-radius: 6px;
   text-align: center;
   -webkit-transition: background 0.2s ease;
+  -o-transition: background 0.2s ease;
   transition: background 0.2s ease;
   /**
    * Disabled button
@@ -871,6 +881,7 @@ abbr {
     top: 7px;
     right: -26px;
     -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
     transition: all 0.2s ease; }
   .c-text-btn:hover, .c-text-btn:focus {
     color: #444444; }
@@ -1017,7 +1028,8 @@ abbr {
     right: 2px;
     width: 100%;
     padding: 1em;
-    box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
     background: #fff;
     z-index: 1; }
 
@@ -1059,7 +1071,8 @@ abbr {
  * Header
  */
 .c-header {
-  box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2);
   padding: 0.5em 0; }
 
 /**
@@ -1519,7 +1532,8 @@ abbr {
     padding: 1em 2em;
     top: 67px;
     right: 0;
-    box-shadow: -3px 3px 5px -2px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: -3px 3px 5px -2px rgba(0, 0, 0, 0.2);
+            box-shadow: -3px 3px 5px -2px rgba(0, 0, 0, 0.2);
     z-index: 2;
     background: #fff; }
 
@@ -1740,7 +1754,7 @@ abbr {
 
 .c-progress::-webkit-progress-value {
   background-color: red;
-  background-image: -webkit-linear-gradient(left, red, #f06d06, yellow, green);
+  background-image: -webkit-gradient(linear, left top, right top, from(red), color-stop(#f06d06), color-stop(yellow), to(green));
   background-image: linear-gradient(to right, red, #f06d06, yellow, green);
   background-size: 300px 50px;
   border-radius: 6px; }
@@ -1753,6 +1767,7 @@ progress[value]::-webkit-progress-bar {
 
 .anim::-webkit-progress-value {
   -webkit-transition: width 4s ease;
+  -o-transition: width 4s ease;
   transition: width 4s ease; }
 
 .c-progress.start::-moz-progress-bar {
