--- a/patterns/source/css/styles-oldie.css
+++ b/patterns/source/css/styles-oldie.css
@@ -24,19 +24,9 @@
 html {
   background: pink;
   border-color: blue;
+  background-image: -o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background: lightgreen;
-}
-
-a {
-  text-decoration: none;
-}
-
-@media (min-width: 500px) {
-  .rounded {
-    border-radius: 10px;
-    font-size: 2rem;
-  }
 }
 
 .rounded {
@@ -44,21 +34,8 @@ a {
   text-decoration: underline;
 }
 
-@media (min-width: 250px) {
-  h1 {
-    color: green;
-  }
-}
-
 html {
   line-height: 1.5;
-}
-
-@media (min-width: 500px) {
-  div {
-    border-radius: 4px;
-    background: blue;
-  }
 }
 
 a {
@@ -67,4 +44,21 @@ a {
 
 h1 {
   text-transform: inherit;
+}
+
+@media (min-width: 250px) {
+  h1 {
+    color: green;
+  }
+}
+
+@media (min-width: 500px) {
+  .rounded {
+    border-radius: 10px;
+    font-size: 2rem;
+  }
+  div {
+    border-radius: 4px;
+    background: blue;
+  }
 }
