Removed cruft from _site

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -7,7 +7,7 @@
   {% include js-mouseflow.html %}
 
 {% else %}
-  <small style="background-color: #ff9;">&lt;Development&gt;</small>
+  <small style="background-color: #ff9; position: fixed; bottom: 0;">&lt;Development&gt;</small>
   <script src="/js/tota11y.min.js"></script>
 {% endif %}
 
