--- a/_includes/root-head.html
+++ b/_includes/root-head.html
@@ -4,12 +4,12 @@
   <meta name="description" content="Findings, trials and errors in Web Design and Development. Noted down by Jonas Päckos." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>{{ page.title }} | Jonas Päckos</title>
+  <title>{{ page.title }} | by Jonas Päckos</title>
 
   <link rel="canonical" href="http://www.pekkos.com/" />
   <link rel="author" href="humans.txt" />
 
-  <!-- Minified css, FTW! -->
+  <!-- Minified css FTW! -->
   <link rel="stylesheet" href="/css/styles.css" />
 
 </head>
