--- a/_includes/root-head.html
+++ b/_includes/root-head.html
@@ -6,7 +6,7 @@
 
   <title>{{ page.title }} | by Jonas Päckos</title>
 
-  <link rel="canonical" href="http://www.pekkos.com/" />
+  <link rel="canonical" href="https://www.pekkos.com/" />
   <link rel="author" href="humans.txt" />
 
   <!-- Minified css FTW! -->
