script tag FTW!

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -19,6 +19,7 @@
 
 <!-- End of third party scripts -->
 
+<script>
 function logTimes(message) {
   performance.mark(message); // this one is for WebPageTest
   console.timeStamp(message); // this is for the Performance tab in Chrome DevTools
@@ -34,3 +35,4 @@ function logTimes(message) {
 }
 
 logTimes('The page is really ready');
+</script>
