testing out a service worker

--- a/_includes/root-head.html
+++ b/_includes/root-head.html
@@ -12,6 +12,8 @@
   <!-- Minified css FTW! -->
   <link rel="stylesheet" href="/css/styles.css" />
 
+  <link rel="serviceworker" href="/serviceworker.js">
+
 </head>
 
 <!--               _                                                                     _           _             __
