--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,7 +11,9 @@
   <small style="background-color: #ff9; position: fixed; bottom: 0;">&lt;Development&gt;</small>
   <script src="/js/tota11y.min.js"></script>
 
-  {% endif %}
+{% endif %}
+
+<script src="/js/offline.js"></script>
 
 <!-- comments count -->
 <script id="dsq-count-scr" src="//pekkos.disqus.com/count.js" async></script>
