Ignore styleguide public build

--- a/styleguide/public/components/preview/stylelint-report.html
+++ b/styleguide/public/components/preview/stylelint-report.html
@@ -23,7 +23,7 @@
 <body>
 
   <div>
-  <p><strong>/Users/pekkos/code/sitecore-starterstore-ui/source/css/sass/config/_settings.foundation.scss</strong></p>
+  <p><strong>/Users/pekkos/git/pekkos.github.io/styleguide/source/css/sass/utilities/_utilities.shame.scss</strong></p>
   <table>
     <thead>
       <tr>
@@ -34,127 +34,30 @@
     </thead>
 
     <tbody>
-      <tr>
-        <td>72</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#1779ba&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>73</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#767676&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>74</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#3adb76&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>75</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#ffae00&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>76</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#cc4b37&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>78</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#e6e6e6&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>79</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#cacaca&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>80</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#8a8a8a&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>81</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#0a0a0a&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>82</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#fefefe&quot; (color-no-hex)</td>
-      </tr>
-    </tbody>
-  </table>
-  <br>
-</div>
-<div>
-  <p><strong>/Users/pekkos/code/sitecore-starterstore-ui/source/css/sass/patterns/_patterns.stuff.scss</strong></p>
-  <table>
-    <thead>
-      <tr>
-        <th>Line</th>
-        <th>Rule</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>3</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#ff44ff&quot; (color-no-hex)</td>
-      </tr>
-    </tbody>
-  </table>
-  <br>
-</div>
-<div>
-  <p><strong>/Users/pekkos/code/sitecore-starterstore-ui/source/css/sass/utilities/_utilities.shame.scss</strong></p>
-  <table>
-    <thead>
-      <tr>
-        <th>Line</th>
-        <th>Rule</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>22</td>
-        <td>color-no-hex</td>
-        <td>Unexpected hex color &quot;#c0ffee&quot; (color-no-hex)</td>
-      </tr>
-      <tr>
-        <td>17</td>
-        <td>declaration-block-no-duplicate-properties</td>
-        <td>Unexpected duplicate &quot;background&quot; (declaration-block-no-duplicate-properties)</td>
-      </tr>
-      <tr>
-        <td>18</td>
-        <td>declaration-block-no-duplicate-properties</td>
-        <td>Unexpected duplicate &quot;background&quot; (declaration-block-no-duplicate-properties)</td>
-      </tr>
-      <tr>
-        <td>23</td>
-        <td>declaration-block-no-duplicate-properties</td>
-        <td>Unexpected duplicate &quot;color&quot; (declaration-block-no-duplicate-properties)</td>
-      </tr>
       <tr>
         <td>13</td>
-        <td>max-empty-lines</td>
-        <td>Expected no more than 5 empty lines (max-empty-lines)</td>
+        <td>rule-empty-line-before</td>
+        <td>Expected empty line before rule (rule-empty-line-before)</td>
       </tr>
       <tr>
-        <td>14</td>
-        <td>max-empty-lines</td>
-        <td>Expected no more than 5 empty lines (max-empty-lines)</td>
+        <td>25</td>
+        <td>rule-empty-line-before</td>
+        <td>Expected empty line before rule (rule-empty-line-before)</td>
       </tr>
       <tr>
-        <td>21</td>
+        <td>35</td>
+        <td>rule-empty-line-before</td>
+        <td>Expected empty line before rule (rule-empty-line-before)</td>
+      </tr>
+      <tr>
+        <td>30</td>
         <td>no-duplicate-selectors</td>
-        <td>Unexpected duplicate selector &quot;body&quot;, first used at line 15 (no-duplicate-selectors)</td>
+        <td>Unexpected duplicate selector &quot;html&quot;, first used at line 1 (no-duplicate-selectors)</td>
+      </tr>
+      <tr>
+        <td>41</td>
+        <td>no-duplicate-selectors</td>
+        <td>Unexpected duplicate selector &quot;a&quot;, first used at line 8 (no-duplicate-selectors)</td>
       </tr>
     </tbody>
   </table>
