Moved js and css folders into /assets/

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,11 +9,11 @@
 {% else %}
 
   <small style="background-color: #ff9; position: fixed; bottom: 0;">&lt;Development&gt;</small>
-  <script src="/js/tota11y.min.js"></script>
+  <script src="/assets/js/tota11y.min.js"></script>
 
 {% endif %}
 
-<script src="/js/offline.js"></script>
+<script src="/assets/js/offline.js"></script>
 
 <!-- comments count -->
 <script id="dsq-count-scr" src="//pekkos.disqus.com/count.js" async></script>
