--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -2,7 +2,7 @@
 <footer role="contentinfo">
   <hr>
   <p>Handcrafted by <a rel="me" href="http://about.me/pekkos">Jonas Päckos</a>, &copy; 2016-{{ site.time | date: '%Y' }}. <a href="http://github.com/pekkos/pekkos.github.io">View source</a>.</p>
-  <p>Talk to me on <a rel="me" href="https://twitter.com/pekkos">twitter</a> or <a rel="me" href="https://github.com/pekkos">GitHub</a>[1234]</p>
+  <p>Talk to me on <a rel="me" href="https://twitter.com/pekkos">twitter</a> or <a rel="me" href="https://github.com/pekkos">GitHub</a></p>
 </footer>
 
 <!--[if lte IE 9]>
