Stitched together the Fractal/Jekyll CSS workflow

--- a/styleguide/source/css/sass/styles.scss
+++ b/styleguide/source/css/sass/styles.scss
@@ -1,23 +1,76 @@
 @charset "UTF-8";
 
-/* TOC in here! */
+/**
+ * STYLES
+ *
+ * [about this file]
+ *
+ *
+ * Table of Contents
+ *
+ * CONFIG
+ *
+ * DELEGATES
+ * All ..................... Delegates are tools and helpers and since they
+ *                           don't produce any CSS they can be glob imported.
+ *
+ * GLOBAL
+ * Box-sizing .............. Default 'box-sizing'
+ * Normalize ............... Levels out browser differences based on a
+ *                           browserslist config file
+ *
+ * HTML
+ *
+ * LAYOUT
+ *
+ * OBJECTS
+ *
+ * PATTERNS
+ * All ..................... Patterns should be componentized and un-independent
+ *                           from each other. Thus, it should be safe to glob
+ *                           import all patterns.
+ *
+ * UTILITIES
+ * Shame ................... The place to put hacks and quick fixes. Just make
+ *                           sure to refactor and distribute this shameful code
+ *                           to where it really should reside.
+ *
+ * WELLNESS
+ *
+ */
 
 
-/*! No CSS before this comment */
-
-/* --- NORMALIZE BELOW --- */
-
-@import-normalize;
-
-/*! END: Normalize ------------- */
 
 
 
+/*! No CSS before this comment! */
 
 
+/* CONFIG */
+
+/* DELEGATES */
+@import "delegates/**/*.scss";
+
+
+
+
+
+/* GLOBAL */
+
+@import "global/global.box-sizing";
+@import-normalize; /* Normalize inserted using PostCSS! */
+// @import "global/global.reset";
+
+/* HTML */
+
+/* LAYOUT */
+
+/* OBJECTS */
+
+/* PATTERNS */
 @import "patterns/**/*.scss";
 
+/* UTILITIES */
 @import "utilities/utilities.shame";
 
-
-/* ------------------ */
+/* WELLNESS */
