--- a/styleguide/source/css/styles.css
+++ b/styleguide/source/css/styles.css
@@ -1,83 +1,113 @@
-/*! No CSS before this comment */
+/*! No CSS before this comment! */
+html{
+  -webkit-box-sizing:border-box;
+          box-sizing:border-box;
+}
+
+*, *:before, *:after{
+  -webkit-box-sizing:inherit;
+          box-sizing:inherit;
+}
+
 /*! normalize.css v9.0.1 | MIT License | github.com/csstools/normalize.css */
+
 html{
   -ms-text-size-adjust:100%;
   -webkit-text-size-adjust:100%;
   line-height:1.15;
 }
+
 h1{
   margin:0.67em 0;
   font-size:2em;
 }
+
 hr{
   -webkit-box-sizing:content-box;
           box-sizing:content-box;
   height:0;
   overflow:visible;
 }
+
 main{
   display:block;
 }
+
 pre{
   font-family:monospace, monospace;
   font-size:1em;
 }
+
 a{
   background-color:transparent;
 }
+
 abbr[title]{
   -webkit-text-decoration:underline dotted;
   text-decoration:underline;
           text-decoration:underline dotted;
 }
+
 b,
 strong{
   font-weight:bolder;
 }
+
 code,
 kbd,
 samp{
   font-family:monospace, monospace;
   font-size:1em;
 }
+
 small{
   font-size:80%;
 }
+
 audio,
 video{
   display:inline-block;
 }
+
 audio:not([controls]){
   display:none;
   height:0;
 }
+
 img{
   border-style:none;
 }
+
 svg:not(:root){
   overflow:hidden;
 }
+
 button,
 input,
 select{
   margin:0;
 }
+
 button{
   overflow:visible;
   text-transform:none;
 }
+
 button,
 [type="button"],
 [type="reset"],
 [type="submit"]{
   -webkit-appearance:button;
 }
+
 fieldset{
   padding:0.35em 0.75em 0.625em;
 }
+
 input{
   overflow:visible;
 }
+
 legend{
   -webkit-box-sizing:border-box;
   display:table;
@@ -86,52 +116,65 @@ legend{
   color:inherit;
   white-space:normal;
 }
+
 progress{
   display:inline-block;
   vertical-align:baseline;
 }
+
 select{
   text-transform:none;
 }
+
 textarea{
   margin:0;
   overflow:auto;
 }
+
 [type="checkbox"],
 [type="radio"]{
   -webkit-box-sizing:border-box;
           box-sizing:border-box;
   padding:0;
 }
+
 [type="search"]{
   -webkit-appearance:textfield;
   outline-offset:-2px;
 }
+
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button{
   height:auto;
 }
+
 ::-webkit-input-placeholder{
   opacity:0.54;
   color:inherit;
 }
+
 ::-webkit-search-decoration{
   -webkit-appearance:none;
 }
+
 ::-webkit-file-upload-button{
   -webkit-appearance:button;
   font:inherit;
 }
+
 ::-moz-focus-inner{
   border-style:none;
   padding:0;
 }
+
 :-moz-focusring{
   outline:1px dotted ButtonText;
 }
+
 details,dialog{
   display:block;
 }
+
 dialog{
   position:absolute;
   right:0;
@@ -148,60 +191,286 @@ dialog{
   height:fit-content;
   color:black;
 }
+
 dialog:not([open]){
   display:none;
 }
+
 summary{
   display:list-item;
 }
+
 canvas{
   display:inline-block;
 }
+
 template,[hidden]{
   display:none;
 }
-/*! END: Normalize ------------- */
-.stuff{
-  background:green;
-}
-
-.thing{
-  background:rebeccapurple;
-}
-
-html{
-  border-color:blue;
-  background:pink;
-  background-image:-o-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-  background-image:linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-}
-
-.rounded{
-  border:1px solid red;
-  text-decoration:underline;
-}
-
-html{
+body{
+  font-family:Georgia, Times, serif;
+  font-size:125%;
   line-height:1.5;
 }
 
-a{
+body > *{
+  margin:0 auto;
+  padding:2em;
+  max-width:40em;
+}
+
+h1, h2, h3, h4{
+  font-family:Tahoma, Arial, sans-serif;
+}
+
+header h1{
+  font-size:80%;
+}
+
+header h1 a{
   text-decoration:none;
 }
 
-@media (min-width: 250px){
-  h1{
-    color:green;
-  }
+img{
+  max-width:100%;
+}
+.highlight{
+  background-color:#49483e;
 }
 
-@media (min-width: 500px){
-  .rounded{
-    border-radius:10px;
-    font-size:2rem;
-  }
-  div{
-    border-radius:4px;
-    background:blue;
-  }
+.c{
+  color:#75715e;
+}
+.err{
+  background-color:#1e0010;
+  color:#960050;
+}
+.k{
+  color:#66d9ef;
+}
+.l{
+  color:#ae81ff;
+}
+.n{
+  color:#f8f8f2;
+}
+.o{
+  color:#f92672;
+}
+.p{
+  color:#f8f8f2;
+}
+.cm,.cp,.c1,.cs{
+  color:#75715e;
+}
+.ge{
+  font-style:italic;
+}
+.gs{
+  font-weight:bold;
+}
+.kc,.kd{
+  color:#66d9ef;
+}
+.kn{
+  color:#f92672;
+}
+.kp,.kr,.kt{
+  color:#66d9ef;
+}
+.ld{
+  color:#e6db74;
+}
+.m{
+  color:#ae81ff;
+}
+.s{
+  color:#e6db74;
+}
+.na{
+  color:#a6e22e;
+}
+.nb{
+  color:#f8f8f2;
+}
+.nc{
+  color:#a6e22e;
+}
+.no{
+  color:#66d9ef;
+}
+.nd{
+  color:#a6e22e;
+}
+.ni{
+  color:#f8f8f2;
+}
+.ne,.nf{
+  color:#a6e22e;
+}
+.nl,.nn{
+  color:#f8f8f2;
+}
+.nx{
+  color:#a6e22e;
+}
+.py{
+  color:#f8f8f2;
+}
+.nt{
+  color:#f92672;
+}
+.nv{
+  color:#f8f8f2;
+}
+.ow{
+  color:#f92672;
+}
+.w{
+  color:#f8f8f2;
+}
+.mf,.mh,.mi,.mo{
+  color:#ae81ff;
+}
+.sb,.sc,.sd,.s2{
+  color:#e6db74;
+}
+.se{
+  color:#ae81ff;
+}
+.sh,.si,.sx,.sr,.s1,.ss{
+  color:#e6db74;
+}
+.bp,.vc,.vg,.vi{
+  color:#f8f8f2;
+}
+.il{
+  color:#ae81ff;
+}
+.highlight{
+  background-color:#404040;
+  padding:1em;
+}
+
+.highlight,.highlight .hll{
+  background-color:#272822;
+}
+
+.highlight .c{
+  color:#75715e;
+}
+.highlight .err{
+  background-color:#1e0010;
+  color:#960050;
+}
+.highlight .k{
+  color:#66d9ef;
+}
+.highlight .l{
+  color:#ae81ff;
+}
+.highlight .n{
+  color:#f8f8f2;
+}
+.highlight .o{
+  color:#f92672;
+}
+.highlight .p{
+  color:#f8f8f2;
+}
+.highlight .cm,.highlight .cp,.highlight .c1,.highlight .cs{
+  color:#75715e;
+}
+.highlight .ge{
+  font-style:italic;
+}
+.highlight .gs{
+  font-weight:bold;
+}
+.highlight .kc,.highlight .kd{
+  color:#66d9ef;
+}
+.highlight .kn{
+  color:#f92672;
+}
+.highlight .kp,.highlight .kr,.highlight .kt{
+  color:#66d9ef;
+}
+.highlight .ld{
+  color:#e6db74;
+}
+.highlight .m{
+  color:#ae81ff;
+}
+.highlight .s{
+  color:#e6db74;
+}
+.highlight .na{
+  color:#a6e22e;
+}
+.highlight .nb{
+  color:#f8f8f2;
+}
+.highlight .nc{
+  color:#a6e22e;
+}
+.highlight .no{
+  color:#66d9ef;
+}
+.highlight .nd{
+  color:#a6e22e;
+}
+.highlight .ni{
+  color:#f8f8f2;
+}
+.highlight .ne,.highlight .nf{
+  color:#a6e22e;
+}
+.highlight .nl,.highlight .nn{
+  color:#f8f8f2;
+}
+.highlight .nx{
+  color:#a6e22e;
+}
+.highlight .py{
+  color:#f8f8f2;
+}
+.highlight .nt{
+  color:#f92672;
+}
+.highlight .nv{
+  color:#f8f8f2;
+}
+.highlight .ow{
+  color:#f92672;
+}
+.highlight .w{
+  color:#f8f8f2;
+}
+.highlight .mf,.highlight .mh,.highlight .mi,.highlight .mo{
+  color:#ae81ff;
+}
+.highlight .sb,.highlight .sc,.highlight .sd,.highlight .s2{
+  color:#e6db74;
+}
+.highlight .se{
+  color:#ae81ff;
+}
+.highlight .sh,.highlight .si,.highlight .sx,.highlight .sr,.highlight .s1,.highlight .ss{
+  color:#e6db74;
+}
+.highlight .bp,.highlight .vc,.highlight .vg,.highlight .vi{
+  color:#f8f8f2;
+}
+.highlight .il{
+  color:#ae81ff;
+}
+.highlight .gu{
+  color:#75715e;
+}
+.highlight .gd{
+  color:#f92672;
+}
+.highlight .gi{
+  color:#a6e22e;
 }
