--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -35,6 +35,6 @@ s.setAttribute('data-timestamp', +new Date());
 
 {% else %}
   {% if page.comments %}
-  <small style="background-color: #ff9;">&lt;Comments here&gt;</small>
+  <p><small style="background-color: #ff9;">&lt;Comments here&gt;</small></p>
   {% endif %}
 {% endif %}
