--- a/_includes/root-head.html
+++ b/_includes/root-head.html
@@ -10,7 +10,7 @@
   <link rel="author" href="humans.txt" />
 
   <!-- Minified css FTW! -->
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/styles.min.css" />
 
   <link rel="serviceworker" href="/serviceworker.js">
 
