--- a/styleguide/source/patterns/05-organisms/post/post.hbs
+++ b/styleguide/source/patterns/05-organisms/post/post.hbs
@@ -1,36 +1,25 @@
-<article class="container h-entry">
-  <h1 class="spacing p-name">[Page title]</h1>
+<article class="post" itemid="url.html" itemscope itemtype="http://schema.org/BlogPosting" itemref="site-organization root author">
 
-  <div class="meta_wrapper">
-    <span>
-      <!-- page.category (removed temporarily?) -->
-      <time class="dt-published" datetime="2018-11-28">November 28, 2018</time>
-    </span>
-    <ul class="tag_list_in_post">
-      <li class="inline tag_list_item">
-        <a class="tag_list_link" href="/tags/#grunt">grunt</a>
-        <a class="tag_list_link" href="/tags/#gulp">gulp</a>
-      </li>
-    </ul>
-  </div>
-
-<div class="blog-post spacing e-content">
-  <p>As a long time user of the <a href="https://gruntjs.com">Grunt</a> task runner, I was finally pushed to make the
-    switch to <a href="https://gulpjs.com">Gulp</a>. It happened at my new employer <a href="https://www.fiwe.com/se/">Fiwe</a>
-    where they favor Gulp and Webpack over Grunt.</p>
-
-  <p>So I decided to move from Grunt to Gulp on this blog too. Not that I had to, but because it seemed as a natural
-    change since I was optimizing front-end tasks anyway.</p>
-
-  <p>At a first glance Gulp seems to be a weeny bit faster than Grunt too, so the change will probably be the better
-    choice in the long run. I must admit I was somewhat confused by Gulp’s more programming-like syntax being used to
-    the configuration-like syntax of Grunt, but it didn’t take long to get used to the new way of writing tasks. I even
-    liked it better, actually.</p>
+  <h1 id="headline" class="post__title" itemprop="name headline">{{ title }}</h1>
 
 
-</div>
-{{ render '@twitter-plug' }}
+  <time datetime="{{ datetime }}" itemprop="datePublished">{{ date-popular }}</time>
+  <time datetime="{{ datetime }}" itemprop="dateModified">{{ date-popular }}</time>
+  <ul>
+    <li><a href="/tags/#{{ tag }}">{{ tag }}</a></li>
+  </ul>
 
-<p>[INCLUDE COMMENTS]</p>
+  <span itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
+    <img itemprop="url" src="https://example.com/images/blog.png" alt="LOGO">
+  </span>
 
-</article>
+
+  <div class="post__content">
+    {{ render '@post-content' }}
+  </div> <!-- END: .post__content -->
+
+  {{ render '@twitter-plug' }}
+
+  <p>[INCLUDE COMMENTS]</p>
+
+</article> <!-- END: .post -->
