--- a/styleguide/source/patterns/06-sections/header/header.hbs
+++ b/styleguide/source/patterns/06-sections/header/header.hbs
@@ -1,5 +1,22 @@
-<header role="banner">
+<header class="spaceout" role="banner">
 
-  <h1><a href="/">p e k k o s .</a></h1>
-
+  <div class="logo" itemprop="publisher" itemscope id="site-organization" itemtype="https://schema.org/Organization">
+    <meta itemprop="name" content="pekkos.com">
+    <meta itemprop="description" content="Random rants by a guy called Jonas">
+    <a class="logo__text" href="https://www.pekkos.com" itemprop="url">
+      <figure itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+        <img src="logo.png" itemprop="url" alt="Logotype">
+      </figure>
+    </a>
+  </div>
+  <span itemprop="author" id="author" itemscope itemtype="https://schema.org/Person">
+    <meta itemprop="name" content="Jonas Päckos">
+  </span>
+  <nav>
+    <ul class="nav-primary">
+      <li>Nav 1</li>
+      <li>Nav 2</li>
+      <li>Nav 3</li>
+    </ul>
+  </nav>
 </header>
