--- a/styleguide/source/patterns/_preview.hbs
+++ b/styleguide/source/patterns/_preview.hbs
@@ -18,7 +18,7 @@
   </style>
 </head>
 
-<body>
+<body id="root" itemprop="mainEntityOfPage" itemscope itemtype="https://schema.org/WebPage" itemref="headline">
 
   {{{ yield }}}
 
